one-nio KV-service realization